# melange_app_demo

./: README.md  dune  dune-project  index.html  melange_app_demo.opam  package.json  pnpm-lock.yaml
src/: App.re  dune
src/components/: Square.re  Table.re  components.re  dune
src/domain/board/: board.re  cell.re  dune
src/domain/other_domain/: dune  other_domain.re
src/domain/some_domain/: dune
