; This dune file is for configuring the 'elements' library in your 
; Melange project.

; (name elements) - This line sets the name of the library to 
; 'elements'.It's the identifier used within your project to refer 
; to this library.

; (modes melange) - This specifies that the library is to be compiled using Melange.

(include_subdirs unqualified)

(library
 (name components)
 (modes melange)
 (libraries board reason-react)
 (preprocess
  (pps melange.ppx reason-react-ppx)))
